--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="form-group">
             <label for="email">Ваш Email</label>
             <input type="email" id="email"
-            placeholder="Ввдите email...">
+            placeholder="Введите email...">
             </div>
             </div>
             <div class="form-group">
